[gd_scene load_steps=21 format=2]

[ext_resource path="res://Asset/Ship/EnemyBos2.png" type="Texture" id=1]
[ext_resource path="res://Asset/Ship/DorOpenMedium.png" type="Texture" id=2]
[ext_resource path="res://Asset/Ship/SpiningEnemyTile.png" type="Texture" id=4]
[ext_resource path="res://Asset/Ship/EnemyBos2TuretMedium.png" type="Texture" id=5]
[ext_resource path="res://Asset/Ship/SpiningEnemyLogo.png" type="Texture" id=6]
[ext_resource path="res://Script/Enemy/EnemyBos2.gd" type="Script" id=10]
[ext_resource path="res://Script/Enemy/FrontTuretBoss2.gd" type="Script" id=11]
[ext_resource path="res://Script/Enemy/TuretSpinBos2.gd" type="Script" id=12]
[ext_resource path="res://Asset/Material/SmokeMedium.material" type="Material" id=13]
[ext_resource path="res://Asset/Material/BurnMediumParticle.tres" type="Material" id=14]

[sub_resource type="Animation" id=14]
resource_name = "FontTuretRotareAround"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("DorFront/FrontTuret:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -180.0, 180.0, 0.0 ]
}

[sub_resource type="Animation" id=15]
resource_name = "FrontTuretPopUp"
length = 1.2
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("DorFront:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DorFront/FrontTuret/Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8, 1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("DorFront/FrontTuret/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("DorFront/FrontTuret:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0.2, 0.2 ), Vector2( 0.4, 0.4 ), Vector2( 0.6, 0.6 ), Vector2( 0.8, 0.8 ), Vector2( 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("DorFront/FrontTuret:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=16]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("DorFront:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DorFront/FrontTuret/Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("DorFront/FrontTuret/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("DorFront/FrontTuret:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.2, 0.2 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("DorFront/FrontTuret:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("DorFront/FrontTuret:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("DorLarge:frame")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("DorLarge/TuretSpin:scale")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.2, 0.2 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("DorLarge/SpiningEnemyLogo:scale")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.2, 0.2 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("DorLarge/TuretSpin:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("DorLarge/SpiningEnemyLogo:visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("DorLarge/TuretSpin/SpiningEnemy:frame")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("DorLarge/TuretSpin/CollisionPolygon2D:disabled")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=18]
resource_name = "SpinTuretPopUp"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("DorLarge:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DorLarge/SpiningEnemyLogo:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6, 0.8, 1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0.2, 0.2 ), Vector2( 0.4, 0.4 ), Vector2( 0.6, 0.6 ), Vector2( 0.8, 0.8 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("DorLarge/TuretSpin:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("DorLarge/SpiningEnemyLogo:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("DorLarge/TuretSpin:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.6, 0.8, 1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0.2, 0.2 ), Vector2( 0.4, 0.4 ), Vector2( 0.6, 0.6 ), Vector2( 0.8, 0.8 ), Vector2( 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("DorLarge/TuretSpin/SpiningEnemy:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.7, 0.9, 1.1, 1.3, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("DorLarge/TuretSpin/CollisionPolygon2D:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Gradient" id=6]
colors = PoolColorArray( 0.139427, 0.481623, 0.713867, 0.972222, 0.0505371, 0.23759, 0.808594, 0 )

[sub_resource type="GradientTexture" id=7]
gradient = SubResource( 6 )

[sub_resource type="Curve" id=9]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.328221 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=10]
curve = SubResource( 9 )

[sub_resource type="ParticlesMaterial" id=11]
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 60.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 100.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 45.0
scale = 30.0
scale_curve = SubResource( 10 )
color_ramp = SubResource( 7 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 6, 13 )

[node name="EnemyBos2" type="KinematicBody2D"]
position = Vector2( 235, -150 )
script = ExtResource( 10 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FontTuretRotareAround = SubResource( 14 )
anims/FrontTuretPopUp = SubResource( 15 )
anims/RESET = SubResource( 16 )
anims/SpinTuretPopUp = SubResource( 18 )

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 0, 48 )
z_index = -1
amount = 20
lifetime = 2.0
fixed_fps = 15
process_material = SubResource( 11 )

[node name="Sprite" type="Sprite" parent="."]
z_index = -1
texture = ExtResource( 1 )
flip_v = true

[node name="DorLarge" type="Sprite" parent="."]
position = Vector2( 0, -13 )
z_index = -1
texture = ExtResource( 2 )
hframes = 2
vframes = 2

[node name="TuretSpin" type="KinematicBody2D" parent="DorLarge" groups=["Enemy", "Ship"]]
visible = false
scale = Vector2( 0.2, 0.2 )
collision_layer = 2
collision_mask = 0
script = ExtResource( 12 )
max_healt = 20000

[node name="SpiningEnemy" type="Sprite" parent="DorLarge/TuretSpin"]
scale = Vector2( 1.125, 1.07143 )
texture = ExtResource( 4 )
hframes = 2
vframes = 3

[node name="ShootTimer" type="Timer" parent="DorLarge/TuretSpin"]
wait_time = 0.3

[node name="Muzzle1" type="Position2D" parent="DorLarge/TuretSpin"]
position = Vector2( 0, 27 )
rotation = -1.5708

[node name="Muzzle2" type="Position2D" parent="DorLarge/TuretSpin"]
position = Vector2( 0, -27 )
rotation = 1.5708

[node name="Muzzle3" type="Position2D" parent="DorLarge/TuretSpin"]
position = Vector2( -28, 0 )

[node name="Muzzle4" type="Position2D" parent="DorLarge/TuretSpin"]
position = Vector2( 28, 0 )
rotation = 3.14159

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="DorLarge/TuretSpin"]
polygon = PoolVector2Array( -25, 0, -5, 5, 0, 25, 5, 5, 25, 0, 5, -5, 0, -25, -5, -5 )
disabled = true

[node name="SpiningEnemyLogo" type="Sprite" parent="DorLarge"]
visible = false
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 6 )

[node name="SmokeParticle" type="Particles2D" parent="DorLarge"]
emitting = false
amount = 20
lifetime = 6.0
fixed_fps = 15
local_coords = false
process_material = ExtResource( 13 )

[node name="BurnParticle" type="Particles2D" parent="DorLarge"]
position = Vector2( 0, 4 )
emitting = false
amount = 40
lifetime = 3.0
fixed_fps = 15
local_coords = false
process_material = ExtResource( 14 )

[node name="DorFront" type="Sprite" parent="."]
position = Vector2( 0, 41 )
z_index = -1
texture = ExtResource( 2 )
hframes = 2
vframes = 2

[node name="FrontTuret" type="KinematicBody2D" parent="DorFront" groups=["Enemy", "Ship"]]
visible = false
scale = Vector2( 0.2, 0.2 )
collision_layer = 2
collision_mask = 0
script = ExtResource( 11 )

[node name="Sprite" type="Sprite" parent="DorFront/FrontTuret"]
position = Vector2( 0, 7 )
texture = ExtResource( 5 )
hframes = 2
vframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DorFront/FrontTuret"]
position = Vector2( 0, 7 )
shape = SubResource( 12 )
disabled = true

[node name="ShootTimer" type="Timer" parent="DorFront/FrontTuret"]
process_priority = 1
wait_time = 0.1

[node name="Muzzle" type="Position2D" parent="DorFront/FrontTuret"]
position = Vector2( 0, 19 )
rotation = -1.5708

[node name="SmokeParticle" type="Particles2D" parent="DorFront"]
emitting = false
amount = 20
lifetime = 6.0
fixed_fps = 15
local_coords = false
process_material = ExtResource( 13 )

[node name="BurnParticle" type="Particles2D" parent="DorFront"]
position = Vector2( 0, 4 )
emitting = false
amount = 40
lifetime = 3.0
fixed_fps = 15
local_coords = false
process_material = ExtResource( 14 )

[node name="ActionTimer" type="Timer" parent="."]
wait_time = 6.0

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="death" from="DorLarge/TuretSpin" to="." method="_on_TuretSpin_death"]
[connection signal="half_healt" from="DorLarge/TuretSpin" to="." method="_on_TuretSpin_half_healt"]
[connection signal="timeout" from="DorLarge/TuretSpin/ShootTimer" to="DorLarge/TuretSpin" method="_on_ShootTimer_timeout"]
[connection signal="death" from="DorFront/FrontTuret" to="." method="_on_FrontTuret_death"]
[connection signal="timeout" from="DorFront/FrontTuret/ShootTimer" to="DorFront/FrontTuret" method="_on_ShootTimer_timeout"]
[connection signal="timeout" from="ActionTimer" to="." method="_on_ActionTimer_timeout"]
